# mtg-collection-bot

./: .gitignore  Cargo.toml  README.md  log4rs.yaml  rust-toolchain.toml
.github/: CODEOWNERS
.github/actions/: pr_build.yaml
.github/workflows/: main_deploy.yaml  pr_build.yaml
config/: common.yaml  mtg.yaml  nubby.yaml
src/: main.rs
src/commands/: mod.rs  mtg.rs  ping.rs
src/interactions/: mod.rs  nubby.rs
src/models/: config.rs
src/mtg/: community_decks.rs  constants.rs  mod.rs  models.rs  search.rs  tucker_collection.rs
src/mtg/providers/: archidekt.rs  mod.rs  moxfield.rs
