[package]
name = "fb3k-discord-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.2", features = ["json"] }
serde = "1.0.197"
serde_json = "1.0.115"
serde_yaml = "0.9"
serenity = { version = "0.12", features = ["client", "gateway", "rustls_backend", "model", "collector"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
urlencoding = "2.1.3"
